\n\r is not the same as \r\n. https://bugs.webkit.org/show_bug.cgi?id=173053

Reviewed by Keith Miller.

JSTests:

* stress/regress-173053.js: Added.
* stress/template-literal-line-terminators.js:

Source/JavaScriptCore:

* parser/Lexer.cpp:
(JSC::Lexer<T>::shiftLineTerminator):
(JSC::LineNumberAdder::add):

LayoutTests:

* js/parse-backslash-before-newline-expected.txt:
* js/script-tests/parse-backslash-before-newline.js:



Canonical link: https://commits.webkit.org/191106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219263 268f45cc-cd09-0410-ab3c-d52691b4dbfc